# voice_search_server

./: Cargo.toml  README  README.md  quick_record.html  test_client.html
.circleci/: config.yml
src/: audio.rs  config.rs  feature_extraction.rs  main.rs  transcribe.rs  transcription.rs  whisper.rs  whisper_repo.rs
test_data/: audacity-vorbis.webm  edge.webm  firefox.webm  microphone-recording.webm  no-codec-specified-edge.webm  opus.webm  poem.webm  vorbis.webm
test_data/english/: alexander_the_great_mono.webm  complete_book_of_cheese_mono.webm  lifes_tragedy_mono.webm  long_arm_mono.webm  oedipus_and_the_sphinx_stereo.webm
test_data/portuguese/: a_filha_do_patrao_stereo.webm  semana_de_arte_moderna_mono.webm
test_data/russian/: po_nedele_ni_slova_ni_s_kem_ne_skazhu_mono.webm  voron_mono_8MHz.webm  vseobshchaia_deklaratsiia_prav_cheloveka.webm
