[package]
name = "voice_search_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-codec = "0.5.2"
actix-web = "4"
actix-ws = "0.3.0"
anyhow = "1.0.97"
futures-util = "0.3.31"
symphonia = "0.5.4"
tokio = { version = "1.44.2", features = ["macros"] }

[dev-dependencies]
actix-http = "3.10.0"
actix-test = "0.1.5"
