[package]
name = "voice_search_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-codec = "0.5.2"
actix-web = "4"
actix-ws = "0.3.0"
anyhow = "1.0.97"
byteorder = "1.5.0"
candle-transformers = "0.8.4"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
hf-hub = "0.4.2"
log = "0.4.27"
matroska-demuxer = "0.6.1"
opus = "0.3.0"
rand = "0.9.1"
serde_json = "1.0.140"
tokenizers = "0.21.1"
tokio = { version = "1.44.2", features = ["macros"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
candle-core = { version = "0.8.4", features = ["metal"] }
candle-nn = { version = "0.8.4", features = ["metal"] }

[target.'cfg(not(target_vendor = "apple"))'.dependencies]
candle-core = { version = "0.8.4" }
candle-nn = { version = "0.8.4" }

[dev-dependencies]
actix-http = "3.10.0"
actix-test = "0.1.5"
